# Changelog
All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).


## [1.1.0] - 2022-11-24
Time for a new release.
# Added
- Suggestions for IBAN
- Suggestions for company infos


## [1.0.0] - 2021-04-10
First release.