@@ -1,4 +1,4 @@
-__version__ = "1.0.0"
+__version__ = "1.1.0"
 __version_info__ = tuple(
     [int(num) if num.isdigit() else num for num in __version__.replace("-", ".", 1).split(".")]
 )
