@@ -1,2 +1,2 @@
-from .dashboard_views import (CompanyCreateView, CompanyDeleteView, CompanyDetailView,
-                              CompanyUpdateView)
+from .dashboard_views import CompanyUpdateView  # noqa
+from .dashboard_views import CompanyCreateView, CompanyDeleteView, CompanyDetailView  # noqa
