@@ -1,7 +1,7 @@
 # -*- coding: utf-8 -*-
-from .api import InvoiceLineViewSet, InvoiceViewSet
-from .dashboard import (InvoiceCancelView, InvoiceCreateView, InvoiceDuplicateView,
-                        InvoiceListView, InvoiceMarkPaidView, InvoiceSendMailView,
-                        InvoiceSendReminderEmailView, InvoiceSnailMailUpdateView,
-                        InvoiceUpdateView)
-from .public import InvoiceDetailView, qrbill
+from .api import InvoiceLineViewSet, InvoiceViewSet  # noqa
+from .dashboard import (InvoiceCancelView, InvoiceCreateView, InvoiceDuplicateView,  # noqa
+                        InvoiceListView, InvoiceMarkPaidView, InvoiceSendMailView,  # noqa
+                        InvoiceSendReminderEmailView, InvoiceSnailMailUpdateView,  # noqa
+                        InvoiceUpdateView)  # noqa
+from .public import InvoiceDetailView, qrbill  # noqa
