@@ -6,6 +6,8 @@ from django.http import HttpRequest
 from allauth.account.adapter import DefaultAccountAdapter
 from allauth.socialaccount.adapter import DefaultSocialAccountAdapter
 
+from .models import User
+
 
 class AccountAdapter(DefaultAccountAdapter):
     def is_open_for_signup(self, request: HttpRequest):
@@ -13,5 +15,21 @@ class AccountAdapter(DefaultAccountAdapter):
 
 
 class SocialAccountAdapter(DefaultSocialAccountAdapter):
+    def pre_social_login(self, request, sociallogin):
+        """
+        Ensure that the user is created with the same email as the social account
+        :param request:
+        :param sociallogin:
+        :return:
+        """
+        user = sociallogin.user
+        if user.id:
+            return
+        try:
+            user = User.objects.get(email=user.email)
+            sociallogin.connect(request, user)
+        except User.DoesNotExist:
+            pass
+
     def is_open_for_signup(self, request: HttpRequest, sociallogin: Any):
         return getattr(settings, "ACCOUNT_ALLOW_REGISTRATION", True)
