@@ -1,7 +1,6 @@
 from django.contrib import admin
 from django.contrib.auth import admin as auth_admin
 from django.contrib.auth import get_user_model
-from django.utils.translation import gettext_lazy as _
 
 from beyondtheadmin.users.forms import UserChangeForm, UserCreationForm
 
