@@ -16,7 +16,7 @@ requests==2.25.1
 django==3.2.12
 django-environ==0.8.1  # https://github.com/joke2k/django-environ
 django-model-utils==4.2.0  # https://github.com/jazzband/django-model-utils
-django-allauth==0.49.0  # https://github.com/pennersr/django-allauth
+django-allauth==0.51.0  # https://github.com/pennersr/django-allauth
 django-crispy-forms==1.14.0  # https://github.com/django-crispy-forms/django-crispy-forms
 django-redis==5.2.0  # https://github.com/jazzband/django-redis
 # Django REST Framework
